--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "axios-retry": "^4.3.0",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
